CSRF as middleware

--- a/userfrosting/templates/pages/public/components/footer.html
+++ b/userfrosting/templates/pages/public/components/footer.html
@@ -5,6 +5,7 @@
     </p>
   </div>
 </footer>
+<script src="{{userfrosting.uri.js}}config.js" ></script>
 {% for item in page.schema.js %}
   <script src="{{userfrosting.uri.js}}{{item}}" ></script>
 {% endfor %}
